Added OS files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,14 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+###
+# OS generated
+###
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
